--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,13 @@
     <dependency>
       <groupId>jakarta.servlet</groupId>
       <artifactId>jakarta.servlet-api</artifactId>
-      <version>5.0.0</version>  <!-- Corrected line -->
+      <version>5.0.0</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>4.0.1</version> <!-- Use the latest version if needed -->
       <scope>provided</scope>
     </dependency>
   </dependencies>
